--- a/package.json
+++ b/package.json
@@ -37,16 +37,20 @@
     "e2e": "protractor ./protractor.conf.js"
   },
   "dependencies": {
+    "@angular/animations": "^5.0.4",
+    "@angular/cdk": "^5.0.0-rc.2",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/core": "5.0.3",
     "@angular/forms": "5.0.3",
     "@angular/http": "5.0.3",
+    "@angular/material": "^5.0.0-rc.2",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
     "core-js": "2.4.1",
     "enhanced-resolve": "3.3.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "5.5.2",
     "zone.js": "0.8.17"
   },
